create calendar bridge and save events on calendar

--- a/ios/ModakTest/Info.plist
+++ b/ios/ModakTest/Info.plist
@@ -48,5 +48,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCalendarsFullAccessUsageDescription</key>
+	<string>Grant full access to calendar</string>
+	<key>NSCalendarsWriteOnlyAccessUsageDescription</key>
+	<string>Write Calendar access</string>
 </dict>
 </plist>
