--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
