--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ocean28799/react-native-lottie-button": "^1.0.2",
     "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "axios": "^1.6.7",
@@ -20,6 +21,7 @@
     "react-native": "0.73.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.8.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.9.0",
@@ -36,6 +38,7 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
